chapters-06-security/external-secrets-aws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-from-external-secret
  namespace: orion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orion-from-external-secret
  template:
    metadata:
      labels:
        app: orion-from-external-secret
    spec:
      serviceAccountName: default
      containers:
        - name: api
          image: orion-api:lab
