chapters-06-security/orion-security.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orion
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-api
  namespace: orion
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: orion-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: orion-api
    spec:
      serviceAccountName: orion-reader
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: orion-api:lab
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: orion-api
  namespace: orion
spec:
  selector:
    app.kubernetes.io/name: orion-api
  ports:
    - name: http
      port: 80
      targetPort: http
